--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
   <h1>Prueba</h1>
-    <iframe src="https://dash-gallery.plotly.host/dash-oil-and-gas/">
+    <iframe src="https://dash-gallery.plotly.host/dash-oil-and-gas/"></frame>
   </body>
 </html>
