--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <body>
-  <h1>Prueba</h1>
-    <iframe src="https://dash-gallery.plotly.host/dash-oil-and-gas/"></frame>
+    <iframe src="https://dash-gallery.plotly.host/dash-oil-and-gas/" width=100% height=100% ></frame>
   </body>
 </html>
