--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <iframe src="https://dash-gallery.plotly.host/dash-oil-and-gas/" width=100% height=100% ></frame>
+    <iframe src="https://dash-gallery.plotly.host/dash-oil-and-gas/" width="100%" height="100%" ></frame>
   </body>
 </html>
